2002-12-02  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-filter-html.c (g_mime_filter_html_init): match
	REG_ICASE so we don't cut off at the first capital letter, duh.

2002-12-01  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-utils.c: #define _GNU_SOURCE for isblank on GNU
	systems.

	* gmime/gmime-gpg-context.c (gpg_ctx_op_wait): Fixed the errno
	saving.

2002-11-21  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-message.c (write_received): After skipping the
	special received token and it's value, skip any following comments
	as well.
	(skip_addrspec): Skip past the '.' and '@' chars before decoding
	the next word or domain respectively.

2002-11-20  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-message.c (write_received): New function to nicely
	format Received headers.
	(write_msgid): New writer function that doesn't fold the msg-id no
	matter now long it is.
	(g_mime_message_init): Override the writer functions for Received
	and Message-Id headers. Should we also override the writer
	function for Path headers to not wrap?

	* gmime/internet-address.c (decode_addrspec): Get rid of an extra
	call to decode_lwsp that wasn't needed.

	* gmime/gmime-header.c (g_mime_header_register_writer): Renamed.

2002-11-18  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Make sure to include -liconv on systems that need it.

2002-11-17  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Check for gethostbyname in -lnsl and also bump the
	version to 1.90.6.

	* src/getopt*.[c,h]: Added for portability to non-GNU systems.

	* gmime/gmime-parser.c (g_mime_parser_init): Initialize scan_from
	and have_regex here instead of in parser_init() since we don't
	want these flags to be reset when a new stream gets set.
	(g_mime_parser_new_with_stream): New convenience function.

2002-11-16  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-utils.c (decode_msgid): Eat the '<' before
	continuing to parse the addr-spec.
